--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ awswrangler==3.8.0
 pandas==2.2.2
 python-dotenv==1.0.1
 kaggle==1.6.14
+SQLAlchemy==2.0.31
+mysql-connector-python==9.0.0
+plotly==5.22.0
+scikit-learn==1.5.1
+xgboost==2.1.0
