--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,5 @@ kaggle==1.6.14
 SQLAlchemy==2.0.31
 mysql-connector-python==9.0.0
 scikit-learn==1.5.1
-xgboost==2.1.0
 fastapi==0.111.0
+streamlit==1.36.0
