--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ mysql-connector-python==9.0.0
 scikit-learn==1.5.1
 fastapi==0.111.0
 streamlit==1.36.0
+plotly==5.22.0
+nbformat==5.10.4
+streamlit-option-menu==0.3.13
